--- a/cards.html
+++ b/cards.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8">
         <meta name = "viewport" content="width=device-width, initial-scale=1">
         <link rel="Stylesheet" type="text/css" href="cards.css">
-        <link ref="Stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+        <link rel="Stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
     </head>
     <body>
         <div class="container-fluid">
